[package]
name = "tube_tag"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.12.1", features = ["image", "advanced", "canvas"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
json_comments = "0.2.2"
simsearch = "0.2.4"